// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Default renders with default props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  padding: 20px;
}

<form
  className="c0"
  noValidate={true}
  onSubmit={[Function]}
/>
`;

exports[`Form accepts props 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 400px;
  padding: 20px;
}

<form
  className="new-class c0"
  id="formId"
  noValidate={false}
  onSubmit={[Function]}
/>
`;
